feat: 添加Caffeine本地缓存实现

--- a/pom.xml
+++ b/pom.xml
@@ -1,162 +1,157 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.saki</groupId>
-	<artifactId>Cubic-API</artifactId>
-	<version>0.0.1</version>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.6</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <groupId>com.saki</groupId>
+    <artifactId>Cubic-API</artifactId>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
     <name>Cubic-API</name>
-	<description>Cubic-API 接口开放平台</description>
+    <description>Cubic-API 接口开放平台</description>
 
     <modules>
         <module>cubic-backend</module>
-		<module>cubic-gateway</module>
-		<module>cubic-common</module>
-		<module>cubic-interface</module>
-	</modules>
+        <module>cubic-gateway</module>
+        <module>cubic-common</module>
+        <module>cubic-interface</module>
+    </modules>
 
-	<properties>
-		<java.version>8</java.version>
-		<!-- 统一依赖版本管理 -->
-		<lombok.version>1.18.24</lombok.version>
-		<gson.version>2.9.0</gson.version>
-		<commons-lang3>3.12.0</commons-lang3>
-		<dubbo.version>3.0.9</dubbo.version>
-		<mybatis-plus.version>3.5.1</mybatis-plus.version>
-		<mybatis-spring.version>2.2.2</mybatis-spring.version>
-		<junit.version>4.13.2</junit.version>
-		<redisson.version>3.23.3</redisson.version>
-		<knife4j.version>3.0.3</knife4j.version>
-		<hutool.version>5.8.9</hutool.version>
-		<cos-api>5.6.97</cos-api>
-		<nacos-client.version>2.1.0</nacos-client.version>
-		<sentinel.version>2021.0.5.0</sentinel.version>
-		<nacos-config>2021.0.1.0</nacos-config>
-		<sentinel-datasource.version>1.8.7</sentinel-datasource.version>
-	</properties>
+    <properties>
+        <java.version>8</java.version>
+        <!-- 统一依赖版本管理 -->
+        <lombok.version>1.18.24</lombok.version>
+        <gson.version>2.9.0</gson.version>
+        <caffeine.version>2.9.3</caffeine.version>
+        <commons-lang3>3.12.0</commons-lang3>
+        <dubbo.version>3.0.9</dubbo.version>
+        <mybatis-plus.version>3.5.1</mybatis-plus.version>
+        <mybatis-spring.version>2.2.2</mybatis-spring.version>
+        <junit.version>4.13.2</junit.version>
+        <redisson.version>3.23.3</redisson.version>
+        <knife4j.version>3.0.3</knife4j.version>
+        <hutool.version>5.8.9</hutool.version>
+        <cos-api>5.6.97</cos-api>
+        <nacos-client.version>2.1.0</nacos-client.version>
+        <sentinel.version>2021.0.5.0</sentinel.version>
+        <nacos-config>2021.0.1.0</nacos-config>
+        <sentinel-datasource.version>1.8.7</sentinel-datasource.version>
+    </properties>
 
-	<dependencies>
-		<!-- 所有子模块公共依赖 -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>${lombok.version}</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <!-- 所有子模块公共依赖 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-	<dependencyManagement>
-		<dependencies>
-			<!-- 内部模块版本管理 -->
-			<dependency>
-				<groupId>com.saki</groupId>
-				<artifactId>cubic-common</artifactId>
-				<version>0.0.1</version>
-			</dependency>
-			<dependency>
-				<groupId>com.saki</groupId>
-				<artifactId>cubic-client-sdk</artifactId>
-				<version>0.0.1</version>
-			</dependency>
+    <dependencyManagement>
+        <dependencies>
+            <!-- 第三方依赖版本管理 -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>${caffeine.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>${cos-api}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>${nacos-client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+                <version>${sentinel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.csp</groupId>
+                <artifactId>sentinel-datasource-nacos</artifactId>
+                <version>${sentinel-datasource.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+                <version>${nacos-config}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-			<!-- 第三方依赖版本管理 -->
-			<dependency>
-				<groupId>com.google.code.gson</groupId>
-				<artifactId>gson</artifactId>
-				<version>${gson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>${commons-lang3}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.dubbo</groupId>
-				<artifactId>dubbo</artifactId>
-				<version>${dubbo.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.baomidou</groupId>
-				<artifactId>mybatis-plus-boot-starter</artifactId>
-				<version>${mybatis-plus.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit.version}</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.redisson</groupId>
-				<artifactId>redisson</artifactId>
-				<version>${redisson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.github.xiaoymin</groupId>
-				<artifactId>knife4j-spring-boot-starter</artifactId>
-				<version>${knife4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>cn.hutool</groupId>
-				<artifactId>hutool-all</artifactId>
-				<version>${hutool.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.qcloud</groupId>
-				<artifactId>cos_api</artifactId>
-				<version>${cos-api}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba.nacos</groupId>
-				<artifactId>nacos-client</artifactId>
-				<version>${nacos-client.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba.cloud</groupId>
-				<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
-				<version>${sentinel.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba.csp</groupId>
-				<artifactId>sentinel-datasource-nacos</artifactId>
-				<version>${sentinel-datasource.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba.cloud</groupId>
-				<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-				<version>${nacos-config}</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>${lombok.version}</version>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
